compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__literal_snapshots@ident_case.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: let IDENT = 0;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                name: Identifier {
                    name: "IDENT",
                    location: <internal>:4:9,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    kind: Literal(
                        Literal {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            kind: Int(
                                IntLiteral {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    value: 0,
                                    kind: I32,
                                },
                            ),
                            location: <internal>:12:13,
                        },
                    ),
                    location: <internal>:12:13,
                },
                location: <internal>:0:14,
            },
        ),
        location: <internal>:0:14,
    },
]
