compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__literal_snapshots@int.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: 0;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                kind: Literal(
                    Literal {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        kind: Int(
                            IntLiteral {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                value: 0,
                                kind: I32,
                            },
                        ),
                        location: <internal>:0:1,
                    },
                ),
                location: <internal>:0:1,
            },
        ),
        location: <internal>:0:1,
    },
]
