compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__literal_snapshots@int_bin_negative.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "-0b01010101;"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                location: <internal>:1:11,
                kind: Literal(
                    Literal {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        location: <internal>:1:11,
                        kind: Int(
                            IntLiteral {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                value: -85,
                                kind: I32,
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:1:11,
    },
]
