compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__literal_snapshots@int_positive.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: 55;
---
[
    Statement {
        id: 0,
        kind: Expression(
            Expression {
                id: 5871781006564002453,
                location: <internal>:0:2,
                kind: Literal(
                    Literal {
                        id: 5871781006564002453,
                        location: <internal>:0:2,
                        kind: Int(
                            IntLiteral {
                                id: 5871781006564002453,
                                value: 55,
                                kind: I32,
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:2,
    },
]
