compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__literal_snapshots@string_content.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\"string\";"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                kind: Literal(
                    Literal {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        kind: String(
                            StringLiteral {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                value: "string",
                            },
                        ),
                        location: <internal>:0:8,
                    },
                ),
                location: <internal>:0:8,
            },
        ),
        location: <internal>:0:8,
    },
]
